refactor(path): Change in path sources

--- a/src/components/Blogcard.astro
+++ b/src/components/Blogcard.astro
@@ -18,7 +18,7 @@ const sortedPost = post.sort(
       <a
         class="text-primary px-4 py-2.5 bg-primary rounded-xl bg-opacity-10"
         aria-label="blog link"
-        href="/blog"
+        href="/my-portfolio/blog"
       >
         View all</a
       >
