--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -30,7 +30,7 @@ const data = getData();
       <a
         class="text-primary px-4 py-2.5 bg-primary rounded-xl bg-opacity-10"
         aria-label="blog link"
-        href="/projects"
+        href="/my-portfolio/projects"
       >
         View all</a
       >
