--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ const makeTitle = title ? title : "Michael Keb";
     <meta name="author" content="Michael Keb" />
     <meta name="theme-color" content="#0a0a0a" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/my-portfolio/favicon.ico" />
     <!-- <meta
       name="google-site-verification"
       content="AuMlxg6HJG3Rwtp1H81O3OmPVW4WaI5jrk1X4Onm0hU"
@@ -99,7 +99,7 @@ const makeTitle = title ? title : "Michael Keb";
         content-visibility: auto;
       }
       body {
-        cursor: url("/cursor.png"), auto;
+        cursor: url("/my-portfolio/cursor.png"), auto;
         font-family: "Poppins", sans-serif;
         background: #0a0a0a;
         background-size: 22px 22px;
