--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,6 +35,7 @@
           </a> -->
           <a
             aria-label="Github"
+            target="_blank"
             href="https://github.com/mikebizne12"
             class="flex flex-row items-center justify-center"
           >
@@ -52,6 +53,7 @@
           <a
             href="https://www.linkedin.com/in/michael-keb-pech/"
             aria-label="Linkedin"
+            target="_blank"
             class="flex items-center justify-center"
           >
             <svg
