--- a/src/components/HeroContent.astro
+++ b/src/components/HeroContent.astro
@@ -28,7 +28,7 @@ import wavingHand from "../assets/images/waving_hand.png";
     <p class="w-5/6 mx-auto mt-2 text-gray-400 font-medium">
        I design and code beautifully simple things, and I love what I do.
     </p>
-    <a href="/#about" class="cursor-pointer w-full h-full z-50">
+    <a href="/my-portfolio/#about" class="cursor-pointer w-full h-full z-50">
       <svg viewBox="0 0 24 24" class="animate-bounce stroke-primary h-8 flex justify-center w-full mt-3 sm:mt-6 sm:h-10" height="1em" fill="none" xmlns="http://www.w3.org/2000/svg"
         ><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g
           id="SVGRepo_tracerCarrier"
