--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -30,7 +30,7 @@ const makeTitle = title ? title : "Michael Keb";
     <meta charset="UTF-8" />
     <meta name="description" content={snippet} />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/my-portfolio/favicon.svg" />
     <!-- <meta
       name="google-site-verification"
       content="AuMlxg6HJG3Rwtp1H81O3OmPVW4WaI5jrk1X4Onm0hU"
