feat(projects): Add new projects

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -53,6 +53,7 @@ const data = getData();
                     src={item.image}
                     class=" object-cover bg-cover rounded-t-xl"
                     alt=""
+                    style={`min-height: 320px;`}
                     transition:name={item.name}
                   />
                 </div>
