feat: update skills and job

--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -24,6 +24,25 @@
         <div class="text-primary font-semibold flex flex-col gap-y-8">
           <!-- <img class="w-16" src="https://cdn-icons-png.flaticon.com/512/2942/2942544.png" alt=""> -->
 
+          <div class="flex gap-8 h-full items-center">
+            <span
+              data-aos="fade-right"
+              class="-ml-[16px] animate-ping absolute inline-flex w-3 h-3 rounded-full bg-sky-400 opacity-75"
+            ></span>
+            <div
+              data-aos="fade-up"
+              class="flex flex-col border-primary/10 border-[1px] bg-primary/10 py-2 w-72 bg-opacity-10 px-8"
+            >
+              <h1 class="text-lg">FullStack Sr</h1>
+              <p class="text-[15px] text-gray-400">Intern</p>
+              <p class="text-[13px] text-gray-500">July 2024 - Present</p>
+              <p>
+                At <a class="text-indigo-300" href="https://sithec.com.mx/"
+                  >Sithec</a
+                >
+              </p>
+            </div>
+          </div>
           <div
             data-aos="fade-up"
             class="flex flex-col border-primary/10 border-[1px] bg-primary/10 py-2 w-72 bg-opacity-10 px-8"
